src/pages/pages.css
/* ... */
.cg {
  background-image: url("../../dist/images/music/cg/cg.jpg");
  height: 100vh;
  margin-bottom: 20px;
}

.cg-description {
  color: white;
  text-align: left;
  padding: 20px;
  width: 40%;
}

.youtube {
  display: block;
  width: 80vw;
  height: 600px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 40px;
}

.cover-title {
  color: white;
  font-size: 40px;
  line-height: 40px;
  font-style: italic;
  margin-bottom: 10px;
}

.cover-artist {
  font-size: 30px;
  line-height: 30px;
  color: rgb(109, 109, 109);
  margin-bottom: 40px;
}

.cover-buttons {
  margin-bottom: 40px;
}

.indulgent-buttons {
  justify-content: flex-end;
}

.mjf-buttons {
  justify-content: flex-start;
}

button {
  margin: 4px;
}

.music-mobile{
  text-align: center;
}

.mobile-banner {
  display: none;
}

@media (max-width: 500px) {
  .mobile-banner {
    display: block;
    width: 100%;
    margin-bottom: 20px;
  }
  .indulgent-title {
    font-size: 50px;
  }
  .indulgent-grid {
    grid-template-columns: repeat(2, 50%);
    grid-template-rows: auto auto;
  }
  .indulgent-grid-text {
    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 2;
    grid-row-end: 3;
  }
  .music-text {
    text-align: center;
  }
  .music-cover {
    height: auto;
    width: 80vw;
  }
  .cover-title {
    width: 90vw;
    text-align: center;
  }
  .cover-artist {
    margin-bottom: 20px;
    width: 100%;
    text-align: center;
  }
  .cover-buttons {
    margin-bottom: 20px;
    width: 90%;
  }
  .cover-extra {
    padding-left: 20px;
    padding-right: 20px;
    color: rgb(105, 105, 105);
    margin-bottom: 20px;
  }
  .mjf {
    display: none;
  }
  .mjf-title {
    font-size: 40px;
    line-height: 40px;
  }
  .mjf-studio {
    width: 90vw;
    padding-bottom: 40px;
  }
  .mjf-description {
    text-align: center;
    width: 100%;
  }
  .youtube {
    height: 200px;
  }
  .cg {
    display: none;
  }
  .cg-description {
    text-align: center;
    width: 100%;
  }  
}

/* end music */

.hi {
  color: white;
  text-align: center;
  padding-top: 150px;
}

.hi-button {
  width: 150px;
  height: 50px;
  border-radius: 100px;
  margin: auto;
  margin-top: 30px;
  line-height: 50px;
  font-size: 30px;
  text-align: center;
  cursor: pointer;
}

.hi-button:active {
  background-color: rgb(63, 0, 63);
  color: rgb(173, 173, 173);
}

.software-flex {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  align-content: center;
}

.software-text {
  color: white;
  font-size: 20px;
  line-height: 30px;
  width: 100%;
  text-align: right;
  padding-left: 20%;
}

.software {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-end;
}

.software-title {
  width: 100%;
  text-align: right;
}

.hi-gif {
  display: block;
  padding: 20px;
  max-width: 90vw;
}

.software-intro {
  color: white;
  width: 100%;
  padding-top: 150px;
  padding-bottom: 150px;
  padding-left: 250px;
  padding-right: 250px;
  font-size: 25px;
  line-height: 30px;
  text-align: center;
}

.software1 {
  background-image: url("../../dist/images/software/color1.png");
  width: 100%;
  min-height: 100vh;
}

.software-ft {
  display: block;
  width: 100%;
  padding-right: 17.5%;
  padding-left: 17.5%;
  margin-bottom: 10px;
}

.software-ft-title {
  width: 100%;
  color: white;
  text-align: center;
  font-size: 40px;
}

.software-ft-subtitle {
  color: white;
  text-align: center;
  width: 100%;
}

.software-ft-info {
  color: white;
  text-align: center;
  width: 100%;
  padding-left: 30vw;
  padding-right: 30vw;
  margin-top: 30px;
  margin-bottom: 40px;
}

.software-ft-button {
  border-color: white;
  border-width: 1px;
  border-style: solid;
  color: white;
  text-align: center;
  font-size: 20px;
  width: fit-content;
  line-height: 40px;
  padding-left: 100px;
  padding-right: 100px;
  margin: auto;
}

.software-ft-button:hover {
  background-color: white;
  color: rgb(0, 255, 0);
}

.software2 {
  padding-top: 50px;
  padding-bottom: 50px;
  min-height: 100vh;
}

.software2-flex {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  justify-content: space-around;
}

.software2-img {
  width: 25vw;
  margin: auto;
  margin-bottom: 30px;
}

.software3 {
  background-image: url("../../dist/images/software/color5.png");
  width: 100%;
  min-height: 100vh;
}

.software4 {
  background-image: url("../../dist/images/software/color3.png");
  width: 100%;
  min-height: 100vh;
}

.software-grid {
  display: grid;
  width: 100%;
  grid-template-columns: 40% 20% 40%;
  grid-template-rows: 50vh 50vh auto;
}

.software-grid-text {
  grid-column-start: 1;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 2;
  overflow: hidden;
  color: white;
  text-align: right;
  padding: 40px;
  padding-left: 5vw;
}

.grid-text-title {
  font-size: 50px;
  line-height: 50px;
  width: 100%;
}

.grid-stairs {
  grid-column-start: 3;
  grid-column-end: 4;
  grid-row-start: 1;
  grid-row-end: 3;
  overflow: hidden;
  margin: 40px;
  margin-left: 0;
}

.grid-bag {
  grid-column-start: 1;
  grid-column-end: 3;
  grid-row-start: 2;
  grid-row-end: 3;
  overflow: hidden;
  margin: 40px;
}

.slb {
  width: 100%;
  margin-bottom: 40px;
  margin-top: 0;
  justify-content: center;
}

.slb-text {
  color: white;
  width: 30%;
}

.slb-img {
  padding: 40px;
  padding-top: 0;
  padding-bottom: 0;
  width: 40vw;
}

.desk {
  background-image: url("../../dist/images/software/desk.jpg");
  width: 100%;
  height: 100vh;
  color: white;
  text-align: center;
  align-content: center;
}

ut {
  color: rgb(191, 87, 0);
}

pi {
  color: rgb(195, 33, 74);
}

arduino {
  color: rgb(1, 152, 158);
}

processing {
  color: rgb(35, 117, 189)
}

.freelance {
  width: 100%;
  padding-right: 20%;
  padding-left: 20%;
  font-size: 50px;
  line-height: 50px;
}
/* ... */

